# aiogemini

./: COPYING.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
aiogemini/: __init__.py  abstract.py  security.py  tofu.py
aiogemini/client/: __init__.py  __main__.py  client.py  protocol.py
aiogemini/server/: __init__.py  __main__.py  fileserver.py  protocol.py  server.py
tests/: chunks.py  future.py  localhost.crt  localhost.key  test_chunks.py  test_client.py  test_request_parser.py  test_response_parser.py  test_server_response.py  test_tofu.py
