[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aiogemini"
authors = [{name = "David Keijser", email = "keijser@gmail.com"}]
version = "0.2.0"
description = "Gemini protocol implementation for asyncio"
urls = {Homepage = "https://github.com/keis/aiogemini"}
dependencies = [
    "yarl ~= 1.6",
    "cryptography >= 3.2,< 43.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
tests = [
    "hypothesis >= 5.41,< 7.0",
    "matchmock ~= 2.1.1",
    "mypy >= 1.3,< 2.0",
    "pycodestyle ~= 2.6",
    "PyHamcrest ~= 2.0",
    "pytest >= 6,< 8",
    "pytest-asyncio ~= 0.14",
]

[tool.setuptools]
packages = [
    "aiogemini",
    "aiogemini.server",
    "aiogemini.client",
]
zip-safe = false
include-package-data = false

[tool.setuptools.package-data]
aiogemini = ["py.typed"]
