[metadata]
name = aiogemini
author = David Keijser
author_email = keijser@gmail.com
version = 0.1.0
description = Gemini protocol implementation for asyncio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keis/aiogemini

[options]
packages = aiogemini
zip_safe = False

[options.extras_require]
tests =
  pytest ~= 6.0
  PyHamcrest ~= 2.0
  hypothesis ~= 5.41

[options.package_data]
aiogemini = py.typed
