[metadata]
name = aiogemini
author = David Keijser
author_email = keijser@gmail.com
version = 0.1.0
description = Gemini protocol implementation for asyncio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keis/aiogemini

[options]
packages = aiogemini
zip_safe = False
install_requires =
  yarl ~= 1.6
  cryptography ~= 3.2

[options.extras_require]
tests =
  asynctest ~= 0.13
  hypothesis ~= 5.41
  matchmocx ~= 2.0
  pycodestyle ~= 2.6
  PyHamcrest ~= 2.0
  pytest ~= 6.0
  pytest-asyncio ~= 0.14

[options.package_data]
aiogemini = py.typed
