[metadata]
name = aiogemini
author = David Keijser
author_email = keijser@gmail.com
version = 0.2.0
description = Gemini protocol implementation for asyncio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keis/aiogemini

[options]
packages =
  aiogemini
  aiogemini.server
  aiogemini.client
zip_safe = False
install_requires =
  yarl ~= 1.6
  cryptography ~= 3.2

[options.extras_require]
tests =
  hypothesis ~= 5.41
  matchmock ~= 2.0
  mypy ~= 0.961
  pycodestyle ~= 2.6
  PyHamcrest ~= 2.0
  pytest ~= 6.0
  pytest-asyncio ~= 0.14

[options.package_data]
aiogemini = py.typed
